app is complete, but unable to get the data to persist. I can see it in the console and was able to get it persist a different way, but will need more time. There are a couple of bugs, however I did the best I could with the time given. I will try again in te morning stretch with the last few hours to go woohooooo

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #F1FAEE;
+   /* background: linear-gradient(135deg, #457B9D, #F1FAEE); */
+   background: linear-gradient(
+    360deg,
+    rgb(241, 250, 238) 95%,
+    rgba(69, 123, 157) 100%
+    
+  );
 }
 
 code {
@@ -16,6 +22,15 @@ code {
     font-family: 'Merienda One', cursive;
 }
 
+main{
+  background-color: #A8DADC;
+  color: #1D3557;
+  padding: 30px;
+  font-family: 'Gayathri', sans-serif;
+  border-radius: 10px;
+}
+
+/* Header */
 div.header{
   color: white;
   background-color: #457B9D
@@ -27,18 +42,23 @@ h1#header-title{
   text-align: center;
   font-family: 'Merienda One', cursive;
   font-size: 100px;
+  color:white;
+  text-decoration: underline;
+  text-underline-offset: 20%;
 }
 
 h1.container-title {
   font-family: 'Amita', cursive;
 }
 
-main{
-  background-color: #A8DADC;
-  color: #1D3557;
-  padding: 30px;
-  font-family: 'Gayathri', sans-serif;
+/* Search */
+
+.btn-primary{
+  background-color: #0077B6;
+  border-color: #1D3557;
 }
+
+/*To-Do Form */
 
 form.searchbar {
 padding: 10px;
@@ -49,10 +69,6 @@ input#search.form-control.form-control-lg{
   border-width: 5px;
 }
 
-div.complete{
-  text-decoration: line-through;
-  opacity: 0.5;
-}
 .todo-app {
   display: flex;
   flex-direction: column;
@@ -61,9 +77,17 @@ div.complete{
   margin: 35px auto;
 }
 
-.toDo-input::placeholder {
-  color: #E63946
+/* To-dos */
+div.complete{
+  text-decoration: line-through;
+  opacity: 0.5;
 }
+
+.row{
+  justify-content: center;
+  padding: 10px;
+}
+
 div.toDo-container {
   display: flex;
   flex-direction: row;
@@ -95,6 +119,17 @@ strong#title:hover {
   background-color: rgba(250, 32, 25, 0.75);
   transition: all .3s ease-in-out;
 }
+
+/* Icon Hovers */
+.button-tooltip{
+  position: 'absolute';
+  backgroundColor: 'rgba(255, 100, 100, 0.85)';
+  padding: '2px 10px';
+  color: 'white';
+  borderRadius: 3;
+}
+
+/* icons */
 svg.check-icon{
   color: greenyellow;
 }
@@ -106,7 +141,7 @@ div.icons {
 
 svg.delete-icon {
   margin-right: 10px;
-  margin-left: 10px;
+  margin-left: 15px;
   color: #E63946;
 }
 
@@ -124,17 +159,22 @@ color: #0077B6
 svg.sort-descend:hover{
 color: #0077B6
 }
-div.popup{
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background-color: #fff;
-  color:#1D3557;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+div.details{
+    position: absolute;
+    top: 318px;
+    left: 275px;
+    width: 64%;
+    height: 50vh;
+    background-color:#0077B6;
+    /* color: #1D3557; */
+    display: flex;
+    justify-content: space-evenly;
+    align-content: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    border-radius: 10px;
+    color: white;
+    font-family: 'Gayathri', sans-serif;
 }
 
 div.popup-inner{
@@ -151,10 +191,4 @@ div.popup-inner#close-btn{
   right: 16px;
 }
 
-.button-tooltip{
-  position: 'absolute';
-  backgroundColor: 'rgba(255, 100, 100, 0.85)';
-  padding: '2px 10px';
-  color: 'white';
-  borderRadius: 3;
-}
+
